deployments/traefik-playground.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: tt-addprefix
  namespace: traefik-playground
spec:
  addPrefix:
    prefix: /prett

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: tt-ratelimit
  namespace: traefik-playground
spec:
  rateLimit:
    average: 100
    burst: 50

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: tt-retry
  namespace: traefik-playground
spec:
  retry:
    attempts: 4

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tt-ingressroute
  namespace: traefik-playground

spec:
  entryPoints:
    - web

  routes:
    - kind: Rule
      # rule: "Host(`example.com`) || (Host(`example.org`) && Path(`/foo`)"
      # rule: "PathPrefix(`/prefix1/`, `/prefix2/{cat:[a-z]+}/{id:[0-9]+}`)"
      match: Path(`/pathtt`)
      priority: 12
      middlewares:
        - name: tt-addprefix
          namespace: traefik-playground
        - name: tt-ratelimit
          namespace: traefik-playground
        - name: tt-retry
          namespace: traefik-playground
      services:
        - name: tts
          namespace: traefik-playground
          kind: TraefikService
